# dldt

.github/workflows/: code_style.yml
docs/template_extension/: cpu_kernel.cpp  cpu_kernel.hpp  extension.cpp  op.cpp  op.hpp
inference-engine/: build_all.sh  build_android.sh
inference-engine/android_studio_guide/: README.md
inference-engine/cmake/: ie_parallel.cmake
inference-engine/demo_app/app/: build.gradle
inference-engine/demo_app/app/src/main/cpp/: CMakeLists.txt  main.cpp
inference-engine/demo_app/app/src/main/cpp/common/samples/: classification_results.h  slog.hpp
inference-engine/demo_app/app/src/main/java/com/example/myapplication/: MainActivity.java
inference-engine/demo_app/gradle/wrapper/: gradle-wrapper.properties
inference-engine/ie_bridges/java/tests/: CNNNetworkTests.java  IETest.java  InferRequestTests.java  InputInfoTests.java  OpenVinoTestRunner.java
inference-engine/include/: ie_blob.h  ie_icnn_network.hpp  ie_iextension.h  ie_layers.h  ie_parameter.hpp  ie_plugin.hpp
inference-engine/include/details/os/: lin_shared_object_loader.h
inference-engine/samples/: CMakeLists.txt
inference-engine/samples/object_detection_sample_ssd/: main.cpp
inference-engine/src/inference_engine/: CMakeLists.txt  cnn_network_impl.cpp  ie_blob.cpp  ie_blob_proxy.cpp  ie_blob_proxy.hpp  ie_core.cpp  ie_extension.cpp  ie_layers.cpp  ie_parameter.cpp
inference-engine/src/inference_engine/cpp_interfaces/base/: ie_inference_plugin_api.hpp
inference-engine/src/inference_engine/cpp_interfaces/impl/: ie_infer_request_internal.hpp
inference-engine/src/mkldnn_plugin/: CMakeLists.txt  mkldnn_graph.cpp  mkldnn_graph_optimizer.cpp  mkldnn_infer_request.cpp
inference-engine/src/mkldnn_plugin/nodes/: detectionoutput.cpp
inference-engine/src/vpu/: CMakeLists.txt
inference-engine/src/vpu/graph_transformer/include/vpu/utils/: containers.hpp
inference-engine/tools/calibration_tool/statistics_collector/: CMakeLists.txt  image_decoder.cpp
model-optimizer/: setup.py
model-optimizer/extensions/front/pytorch/: batchnorm.py  detection_output_ext.py
model-optimizer/extensions/load/pytorch/: hooks.py  loader.py
model-optimizer/extensions/ops/: interpolate.py
model-optimizer/mo/: main.py
